implemented backend for spotify API

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ code {
         monospace;
 }
 
-td {
-    height: 50px;
-    width: 50px;
-    border: 1px black solid;
+#game-board {
+    height: 80vh;
+    width: 100%;
+    border: 5px black solid;
 }
