--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+* {
+    margin: 0;
+}
+
 body {
+    box-sizing: border-box;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -12,8 +17,32 @@ code {
         monospace;
 }
 
+header {
+    height: 9vh;
+}
+
 #game-board {
     height: 80vh;
-    width: 100%;
     border: 5px black solid;
+}
+
+#spotify-player {
+    height: 9.9vh;
+    background-color: gray;
+    display: flex;
+    justify-content: space-between;
+}
+
+#spotify-player img {
+    height: 100%;
+    display: block;
+}
+
+#spotify-player .track-info {
+    display: flex;
+    align-items: center;
+}
+
+p {
+    margin: 0px 2px;
 }
